--- a/src/pages/Restaurant.css
+++ b/src/pages/Restaurant.css
@@ -8,9 +8,9 @@
   padding: 0;
 }
 
-.restaurant-item {
+.restaurant-list-item {
   width: 10em;
-  margin: 1em;
+  margin: 1em auto;
   padding: 1em;
   border: 2px solid black;
   border-radius: 1em;
