--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,7 +6,7 @@
 }
 
 .home-title {
-  
+
 }
 
 .home-list {
@@ -14,14 +14,15 @@
 }
 
 .home-list-item {
+  cursor: pointer;
+}
+
+.home-list-item-link {
+  display: block;
   width: 10em;
   margin: 1em auto;
   padding: 1em;
   border: 2px solid grey;
   border-radius: 2em;
-  cursor: pointer;
-}
-
-.home-list-item-link {
   text-decoration: none;
 }
