--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -4,8 +4,8 @@
 
 .nav-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  /* height: 150px; */
+  padding: 15px;
   color: white;
 }
 
