--- a/src/pages/Restaurant.css
+++ b/src/pages/Restaurant.css
@@ -5,40 +5,88 @@
   text-align: center;
 }
 
-.restaurant-name {
-  padding: 0;
-  margin: 0.5em 0 0 0;
+.restaurant-header {
+  position: relative;
+  text-align: center;
 }
 
-.restaurant-list-item {
+.restaurant-header img {
+  width: 100%;
+  height: 5em;
+}
+
+.restaurant-header-title {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 5em;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.restaurant-name {
+  color: white;
+  font-size: 1.8em;
+  font-weight: 700;
+}
+
+.restaurant-location {
+  color: white;
+  font-size: 1.4em;
+}
+
+.restaurant-search {
+  height: 1.5em;
+  padding: 0.5em;
+  opacity: 0.5;
+  font-style: italic;
+  background: red;
+}
+
+.restaurant-list {
+  background: yellow;
+}
+
+.restaurant-category {
+}
+
+.restaurant-category-name {
+  margin: 0.5em;
+  padding: 0.5em;
+  background: black;
+  text-align: center;
+  font-size: 1.2em;
+  color: white;
+}
+
+.restaurant-item {
+  display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  align-items: center;
-  width: 15em;
-  margin: 1em auto;
-  padding: 1em;
-  border: 2px solid grey;
-  border-radius: 2em;
+  margin: 0.5em;
+  padding: 0.5em;
+  background: white;
   cursor: pointer;
 }
 
-.restaurant-list-item-fill {
-  width: 2em;
-  height: 2em;
-}
-
-.restaurant-list-item-name {
+.restaurant-item-name {
   margin: 0;
   padding: 0;
+  max-width: 16em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.restaurant-list-item-user-rating span {
+.restaurant-item-user-rating span {
   margin: 0 2px;
 }
 
-.restaurant-list-item-overall-rating-container {
+.restaurant-item-overall-rating-container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -48,18 +96,18 @@
   /* border-radius: 0.5em; */
 }
 
-.restaurant-list-item-overall-rating {
+.restaurant-item-overall-rating {
   margin: 0;
   text-decoration: none;
   font-size: 12px;
 }
 
-.restaurant-list-item-overall-rating-star {
+.restaurant-item-overall-rating-star {
   width: 5px;
   height: 5px;
 }
 
-.restaurant-list-item-overall-rating-avg {
+.restaurant-item-overall-rating-avg {
   margin: 0;
   text-decoration: none;
   font-size: 10px;
