--- a/src/components/HeaderBar.css
+++ b/src/components/HeaderBar.css
@@ -22,6 +22,15 @@
   height: 4em;
 }
 
+.header-profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4em;
+  height: 4em;
+  text-decoration: none;
+}
+
 .nav-bar {
   display: flex;
   height: 100%;
