--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,23 +6,49 @@
 }
 
 .home-title {
-
+  margin: 0.5em;
+  font-size: 1.4em;
 }
 
-.home-list {
-
+.home-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.2em;
+  border: 3px solid gray;
+  border-radius: 0.5em;
 }
 
-.home-list-item {
-  cursor: pointer;
+.home-search-input {
+  border: 0;
+  text-align: center;
 }
 
-.home-list-item-link {
+.home-search-input::placeholder {
+  color: lightgray;
+}
+
+.home-search-input:focus {
+    outline-width: 0;
+}
+
+.home-search-icon {
+  width: 2em;
+}
+
+.home-restaurant {
   display: block;
-  width: 10em;
-  margin: 1em auto;
-  padding: 1em;
-  border: 2px solid grey;
-  border-radius: 2em;
+  margin: 0.8em 0.3em;
+  padding: 0.7em;
+  background: gray;
+  color: white;
   text-decoration: none;
+}
+
+.home-restaurant-name {
+  font-size: 1.5em;
+}
+
+.home-restaurant-location {
+
 }
