--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -68,18 +68,32 @@
 }
 
 .home-restaurant {
+  position: relative;
   display: block;
   margin: 0.8em 0.3em;
-  padding: 0.7em;
   background: gray;
   color: white;
   text-decoration: none;
 }
 
-.home-restaurant-name {
-  font-size: 1.5em;
+.home-restaurant-img {
+  width: 100%;
+  height: 4em;
 }
 
-.home-restaurant-location {
+.home-restaurant-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 4em;
+  background: rgba(0, 0, 0, 0.5);
+}
 
+.home-restaurant-name {
+  font-size: 1.5em;
 }
