--- a/src/pages/Restaurant.css
+++ b/src/pages/Restaurant.css
@@ -72,12 +72,11 @@
 
 .restaurant-category-header {
   position: relative;
-  text-align: center;
 }
 
 .restaurant-category-img {
   width: 100%;
-  height: 3em;
+  height: 2.5em;
 }
 
 .restaurant-category-title {
@@ -89,7 +88,7 @@
   justify-content: center;
   text-align: center;
   width: 100%;
-  height: 3em;
+  height: 2.5em;
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -102,15 +101,17 @@
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
+  align-items: center;
   margin: 0.2em;
-  padding: 0.5em;
+  padding: 0.3em;
+  border-radius: 0.3em;
   background: white;
   cursor: pointer;
 }
 
 .restaurant-item-name {
   margin: 0;
-  padding: 0;
+  padding: 0.4em;
   max-width: 16em;
   white-space: nowrap;
   overflow: hidden;
@@ -126,15 +127,17 @@
   flex-direction: row;
   align-items: center;
   margin-top: 2px;
-  /* padding: 3px; */
-  /* border: 1px solid grey; */
-  /* border-radius: 0.5em; */
 }
 
 .restaurant-item-overall-rating {
-  margin: 0;
+  margin: 0 0.4em;
+  padding: 0.3em 0.6em;
+  border-radius: 0.3em;
+  font-size: 0.9em;
+  font-weight: 600;
+  color: white;
+  letter-spacing: 1px;
   text-decoration: none;
-  font-size: 12px;
 }
 
 .restaurant-item-overall-rating-star {
@@ -142,8 +145,8 @@
   height: 5px;
 }
 
-.restaurant-item-overall-rating-avg {
-  margin: 0;
-  text-decoration: none;
-  font-size: 10px;
+.restaurant-no-items {
+  margin: 2em;
+  text-align: center;
+  font-size: 2em;
 }
