--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -70,8 +70,8 @@
 .home-restaurant {
   position: relative;
   display: block;
+  height: 4em;
   margin: 0.8em 0.3em;
-  background: gray;
   color: white;
   text-decoration: none;
 }
@@ -91,7 +91,6 @@
   text-align: center;
   width: 100%;
   height: 4em;
-  background: rgba(0, 0, 0, 0.5);
 }
 
 .home-restaurant-name {
