--- a/src/pages/Restaurant.css
+++ b/src/pages/Restaurant.css
@@ -32,6 +32,7 @@
 }
 
 .restaurant-location {
+  margin-bottom: 0.5em;
   color: white;
   font-size: 1em;
 }
@@ -63,84 +64,6 @@
 
 .restaurant-list {
   background: grey;
-}
-
-.restaurant-category {
-}
-
-.restaurant-category-header {
-  position: relative;
-  height: 2.5em;
-}
-
-.restaurant-category-img {
-  width: 100%;
-  height: 2.5em;
-}
-
-.restaurant-category-title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  height: 2.5em;
-}
-
-.restaurant-category-name {
-  color: white;
-  font-size: 1.4em;
-}
-
-.restaurant-item {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0.2em;
-  padding: 0.3em;
-  border-radius: 0.3em;
-  background: white;
-  cursor: pointer;
-}
-
-.restaurant-item-name {
-  margin: 0;
-  padding: 0.4em;
-  max-width: 16em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.restaurant-item-user-rating span {
-  margin: 0 2px;
-}
-
-.restaurant-item-overall-rating-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-top: 2px;
-}
-
-.restaurant-item-overall-rating {
-  margin: 0 0.4em;
-  padding: 0.3em 0.6em;
-  border-radius: 0.3em;
-  font-size: 0.9em;
-  font-weight: 600;
-  color: white;
-  letter-spacing: 1px;
-  text-decoration: none;
-}
-
-.restaurant-item-overall-rating-star {
-  width: 5px;
-  height: 5px;
 }
 
 .restaurant-no-items {
