--- a/src/pages/Restaurant.css
+++ b/src/pages/Restaurant.css
@@ -41,11 +41,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.2em;
+  margin: 0.2em;
+  padding: 0.3em;
+  border-radius: 0.3em;
+  background: white;
 }
 
 .restaurant-search-input {
   border: 0;
+  font-size: 0.9em;
   text-align: center;
   background: none;
 }
