--- a/src/components/RatingPanel.css
+++ b/src/components/RatingPanel.css
@@ -39,4 +39,10 @@
   letter-spacing: 1px;
   text-decoration: none;
   cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
