--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -13,16 +13,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 50%;
   width: 100%;
   margin: auto;
 }
 
 .welcome-icon {
-  width: 60%;
+  height: 70%;
 }
 
 .welcome-logo {
-  width: 60%;
+  height: 30%;
 }
 
 .welcome-signin {
